--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  font-family: 'Poppins', sans-serif;
 }
 
 .App-header {
-  background-color: #282c34;
+  background-image: url(./bluebackground.jpeg);
+  background-size: cover;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  font-size: 1.1rem;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
 }
 
-.App-link {
-  color: #61dafb;
+.logincard {
+  max-width: 575px;
+  height: 100vh;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.signintext {
+  font-size: 0.8rem;
+  padding-top: 10px;
+}
+
+.loginform {
+  justify-content: center;
+}
+
+.cardform {
+  border-radius: 10%;
 }
